k8s/prod-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www.yorqat.com
  namespace: prod
spec:
  selector:
    matchLabels:
      app: www.yorqat.com
  template:
    metadata:
      labels:
        app: www.yorqat.com
    spec:
      volumes:
        - name: wwwyorqatcom-mount
          nfs:
            # use production directory
            path: "/pv/prod.www.yorqat.com.pvc"
            server: cornea
            readOnly: true
      containers:
        - name: wwwyorqatcom
          image: node:20-alpine
          command: ["node", "/app"]
          volumeMounts:
           - name: wwwyorqatcom-mount
             mountPath: /app
          ports:
            - containerPort: 3000
