k8s/runners.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner-www-yorqat
  namespace: ci-runner
spec:
  replicas: 2
  selector:
    matchLabels:
      app: runner-www-yorqat
  template:
    metadata:
      labels:
        app: runner-www-yorqat
    spec:
      containers:
      - name: runner-www-yorqat
        image: myoung34/github-runner:ubuntu-focal
        ports:
        - containerPort: 80
