k8s/staging-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-www.yorqat.com
  namespace: staging
spec:
  selector:
    matchLabels:
      app: staging-www.yorqat.com
  replicas: 1
  template:
    metadata:
      labels:
        app: staging-www.yorqat.com
    spec:
      volumes:
        - name: staging-wwwyorqatcom-mount
          nfs:
            path: "/pv/staging-www.yorqat.com.pvc"
            server: cornea
            readOnly: true
      containers:
        - name: staging-wwwyorqatcom
          image: node:20-alpine
          command: ["node", "/app"]
          volumeMounts:
           - name: staging-wwwyorqatcom-mount
             mountPath: /app
          ports:
            - containerPort: 3000
