k8s/prod-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wwwyorqatcom-service
  namespace: prod
spec:
  selector:
    app: www.yorqat.com
  ports:
    - port: 5678
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www.yorqat.com
  namespace: prod
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: clusterissuer-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: www.yorqat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wwwyorqatcom-service
                port:
                  number: 5678
  tls:
    - secretName: www.yorqat.com
      hosts:
        - www.yorqat.com
