k8s/staging-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: staging-wwwyorqatcom-service
  namespace: staging
spec:
  type: NodePort
  ports:
    - port: 5678
      targetPort: 3000
      nodePort: 30000
  selector:
    app: staging-www.yorqat.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-www.yorqat.com
  namespace: staging
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: clusterissuer-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: staging-www.yorqat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-wwwyorqatcom-service
                port:
                  number: 5678
  tls:
    - secretName: staging-www.yorqat.com
      hosts:
        - staging-www.yorqat.com
